--- a/index.html
+++ b/index.html
@@ -1,88 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ESTIBALIZ CORTES GARCIA: Skincare</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    color: #333;
-    background-color: #f9f9f9;
-    text-align: justify;
-  }
-  h1 {
-    color: #007bff;
-  }
-  h2 {
-    color: #007bff;
-  }
-  p {
-    color: #666;
-  }
-  .container {
-    max-width: 800px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Mi primera pagina personal">
+  <meta name="author" content="Estibaliz Cortés García">
+  <meta name="robots" content="index,follow">
+  <title>ESTIBALIZ CORTES GARCIA</title>
+  <link rel="icon" href="./fotos/iconoLoro.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-
-<div class="container">
-  <h1>SKINCARE: PÁGINA PRINCIPAL</h1>
-
-  <div class="¿qué es?">
-    <h2>¿QUÉ ES EL SKINCARE?</h2>
-    <p>El skincare es una rutina de cuidado personal que se enfoca en mantener la piel sana y radiante. Involucra el uso de productos como limpiadores, hidratantes y protectores solares, cuya función es limpiar, hidratar, nutrir y proteger la piel de factores externos como el sol y la radiación. Es una práctica para mantener la firmeza de la piel y prevenir problemas como el acné, las arrugas y la despigmentación.</p>
-    <ul>
-      <li><a href="./enlaces/importancia.html">Importancia</a></li>
-      <li><a href="./enlaces/tips.html">Tips</a></li>
-    </ul>
-  </div>
-
-  <div class="orden que hay que seguir">
-    <h2>ORDEN QUE HAY QUE SEGUIR</h2>
-    <ul>
-      <li><a href="./enlaces/orden.html">¿Por qué hay que seguir un orden?</a></li>
-      <li value="1"><a href="./enlaces/limpiador.html">Limpiador</a></li>
-      <li><a href="./enlaces/contorno.html">Contorno de ojos</a></li>
-      <li><a href="./enlaces/tonico.html">Tónico</a></li>
-      <li><a href="./enlaces/serum.html">Serum</a></li>
-      <li><a href="./enlaces/hidratante.html">Crema Hidratante</a></li> 
-      <li><a href="./enlaces/aceites.html">Aceites</a></li>
-      <li><a href="./enlaces/protector.html">Protector solar</a></li>
-    </ul>
-    <ul>
-      <li><a href="./enlaces/usosemanal.html">Productos de uso semanal</a></li>
-    </ul>  
-  </div>
-
-  <div class="tipos de piel">
-    <h2>TIPOS DE PIELES</h2>
-    <ul>
-      <li><a href="./enlaces/pielseca.html">Piel Seca</a></li>
-      <li><a href="./enlaces/pielmixta.html">Piel Mixta</a></li>
-      <li><a href="./enlaces/pielgrasa.html">Piel Grasa</a></li>
-      <li><a href="./enlaces/pielacne.html">Piel con acné</a></li>
-      <li><a href="./enlaces/pielverano.html">Piel tras el verano</a></li> 
-      <li><a href="./enlaces/pielfrio.html">Piel tras el frío</a></li>
-    </ul>
-  </div>
-
-  <div class="rutina segun los tipos de pieles">
-    <h2>CONSEJOS DE RUTINAS PARA PIELES Secas, Mixtas y Grasas</h2>
-    <ul>
-      <li><a href="./enlaces/rutinas.html">Consejos</a></li>
-    </ul>
-  </div>
-
-</div>
-
+  <header>
+    <h1>SKINCARE: PÁGINA PRINCIPAL</h1>
+    <nav>
+      <div>
+        <a class="button" href="index.html">Inicio</a>
+        <a class="button" href="skincare.html">Skincare</a>
+      </div>
+    </nav>
+    <figure>
+      <picture>
+        <source media="(max-widith: 799px)" srcset="./fotos/Portada400px.jpg">
+        <source media="(min-width: 800px)" srcset="./fotos/Portada800px.jpg">
+        <img src="./fotos/Portada800px.jpg" alt="Imagen de la portada">
+      </picture>
+    </figure>
+  </header>
+  <main>
+    <section id="seccionSkincare" class="seccionSkincare">
+      <h2>SECCION DEL SKINCARE</h2>
+      <article class="articleIndexSkincare">
+        <a href="skincare.html" id="skincare.html">
+          <h2>¿QUÉ ES EL SKINCARE?</h2>
+          <p>El skincare es una rutina de cuidado personal que se enfoca en mantener la piel sana y radiante. Involucra
+            el uso de productos como limpiadores, hidratantes y protectores solares, cuya función es limpiar, hidratar,
+            nutrir y proteger la piel de factores externos como el sol y la radiación. Es una práctica para mantener la
+            firmeza
+            de la piel y prevenir problemas como el acné, las arrugas y la despigmentación.</p>
+        </a>
+        <a href="skincare.html">
+          <figure>
+            <picture>
+              <source media="(max-width: 799px)" srcset="./fotos/skincare400.jpg">
+              <source media="(min-width: 800px)" srcset="./fotos/skincare800.jpg">
+              <img src="./fotos/skincare800.jpg" alt="Imagen pag principal Skincare">
+            </picture>
+            <figcaption style="text-align: center;">Todo sobre el <i><q>Skincare</q></i></figcaption>
+          </figure>
+        </a>
+        <a href="skincare.html">
+          <h3>Leer más...</h3>
+        </a>
+      </article>
+    </section>
+  </main>
 </body>
+
 </html>
